# monmodel

./: .gitignore  MANIFEST.in  README.md  example-model.xml  model.xsd  pyproject.toml  tox.ini
docs/: model.puml  oath.md
prometheus_image/: Dockerfile
sites/: server.py
sites/jsfiddle_like/: index.html
sites/my_fluid_dynamics_sim/: index.html
sites/my_force_directed_graph/: graph.json  index.html  renderer.js  script.js  style.css  updater.js
sites/object_detection_demo/: index.html
sites/spheres/: index.html
sites/tower/: index.html
src/openapi/: spec.yml
src/xsd/: model.xsd
swagger_server/: __main__.py
swagger_server/controllers/: default_controller.py
swagger_server/models/: __init__.py  alert.py  alert_defaults.py  duration.py  link.py  metric.py  model.py  team.py  team_channels.py  template_values.py  threshold.py
swagger_server/swagger/: swagger.yaml
swagger_server/test/: test_default_controller.py
xsd/: model.xsd  team.xsd
